name: when user enters valid card details, should support to generate a card and a cvc session
appId: com.worldpay.access.checkout.reactnative.demo

---
- runFlow:
    label: "Given I have started the application"
    file: "../before-each/launch-app.yaml"
- tapOn:
    label: "And I have toggled cvc session"
    id: "cardAndCvcSessionsToggle"
- runFlow:
    label: "And I have entered valid card details"
    file: "../before-each/enter-valid-card-details.yaml"
- tapOn:
    label: "When I click on the submit button"
    id: "submitButton"
- assertVisible:
    label: "Then I should see a card session has been generated"
    id: "cardSession"
    text: 'https:\/\/try\.access\.worldpay\.com\/sessions\/[a-zA-Z0-9-]+'
- assertVisible:
    label: "And cvc session has been generated"
    id: "cvcSession"
    text: 'https:\/\/try\.access\.worldpay\.com\/sessions\/[a-zA-Z0-9-]+'
